--- a/assignment1.qmd
+++ b/assignment1.qmd
@@ -17,8 +17,8 @@ assignment <- c('Install R', 'Install RStudio', 'Visual Salience Reading',
           'R Graphics Cookbook - Preface and 1.1 through 1.5 in R Basics',
           'R for Data Science - 3. Data Visualization', 'Leaflet for R',
           'LA Times - Prof. Phillips - Warehouse Growth', 'Guardian - Maanvi Singh - Ontario Warehouses')
-due.Date <- c('Aug 28, 2023', 'Aug 28, 2023', 'Aug 28, 2023', 'Sept , 2023', 'Jan 27, 2023', 'Jan 27, 2023',
-              'Feb 1, 2023', 'Feb 1, 2023')
+due.Date <- c('Aug 28, 2023', 'Aug 28, 2023', 'Aug 28, 2023', 'Sept 4, 2023', 'Sept 4, 2023', 'Sept 11, 2023',
+              'Sept 11, 2023', 'Sept 11, 2023')
 source <- c('https://mikem-radicalresearch.quarto.pub/environmental-data-visualization/tools.html',  'https://mikem-radicalresearch.quarto.pub/environmental-data-visualization/tools.html',          'http://www.scholarpedia.org/article/Visual_salience', 'https://r-graphics.org/',
             'https://r4ds.had.co.nz/data-visualisation.html', 'https://rstudio.github.io/leaflet/',
             '', 'https://www.theguardian.com/us-news/2022/sep/13/ontario-california-amazon-warehouses')
