--- a/assignment1.qmd
+++ b/assignment1.qmd
@@ -13,15 +13,30 @@ library(dplyr)
 library(kableExtra)
 
 
-assignment <- c('Install R', 'Install RStudio', 'Visual Salience Reading',
-          'R Graphics Cookbook - Preface and 1.1 through 1.5 in R Basics',
-          'R for Data Science - 3. Data Visualization', 'Leaflet for R',
-          'LA Times - Prof. Phillips - Warehouse Growth', 'Guardian - Maanvi Singh - Ontario Warehouses')
-due.Date <- c('Aug 28, 2023', 'Aug 28, 2023', 'Aug 28, 2023', 'Sept 4, 2023', 'Sept 4, 2023', 'Sept 11, 2023',
-              'Sept 11, 2023', 'Sept 11, 2023')
-source <- c('https://mikem-radicalresearch.quarto.pub/environmental-data-visualization/tools.html',  'https://mikem-radicalresearch.quarto.pub/environmental-data-visualization/tools.html',          'http://www.scholarpedia.org/article/Visual_salience', 'https://r-graphics.org/',
-            'https://r4ds.had.co.nz/data-visualisation.html', 'https://rstudio.github.io/leaflet/',
-            '', 'https://www.theguardian.com/us-news/2022/sep/13/ontario-california-amazon-warehouses')
+assignment <- c('Install R', 
+                'Install RStudio', 
+                'Visual Salience Reading',
+                'R Graphics Cookbook - Preface and 1.1 through 1.5 in R Basics',
+                'R for Data Science - 3. Data Visualization', 
+                'Leaflet for R', 
+                'LA Times - Prof. Phillips - Warehouse Growth', 
+                'Guardian - Maanvi Singh - Ontario Warehouses')
+due.Date <- c('Aug 28, 2023', 
+              'Aug 28, 2023', 
+              'Aug 28, 2023', 
+              'Sept 4, 2023', 
+              'Sept 4, 2023', 
+              'Sept 11, 2023',
+              'Sept 11, 2023', 
+              'Sept 11, 2023')
+source <- c('https://mikem-radicalresearch.quarto.pub/environmental-data-visualization/tools.html', 
+            'https://mikem-radicalresearch.quarto.pub/environmental-data-visualization/tools.html', 
+            'http://www.scholarpedia.org/article/Visual_salience', 
+            'https://r-graphics.org/',
+            'https://r4ds.had.co.nz/data-visualisation.html', 
+            'https://rstudio.github.io/leaflet/',
+            '', 
+            'https://www.theguardian.com/us-news/2022/sep/13/ontario-california-amazon-warehouses')
 
 unit1 <- data.frame(assignment, due.Date, source)# %>% 
 
@@ -46,4 +61,4 @@ Write a two-page paper (12-point font or less) describing the visualization and 
 4. Features that provide interesting structure to the data and make it more informative
 5. Features that you find aid in communicating knowledge or help **tell the story**.  
 
-Assignment is due February 3, 2023 at the beginning of class (9:45 AM).  Assignments can be emailed or physically turned in. This assignment is worth 150 points. Spelling, grammar, and sentence structure will be a minor component of the score (~10 points).    
+Assignment is due September 18, 2023 at the beginning of class (9:45 AM).  Assignments can be emailed or physically turned in. This assignment is worth 150 points. Spelling, grammar, and sentence structure will be a minor component of the score (~10 points).    
