--- a/debugging.qmd
+++ b/debugging.qmd
@@ -1,10 +1,10 @@
-# Top Debugging Steps {#sec-appendix-debugging}
+# Appendix D. Debugging Steps {#sec-appendix-debugging}
 
 ::: callout-tip
 This provides my top debugging tips for beginners. I'll add to it as we encounter common bugs in class.
 :::
 
-## 1. Is there a typo?
+## Is there a typo?
 
 Running any line of code or code block will fail if there is a typo.\
 Check for:
@@ -13,7 +13,7 @@ Check for:
 -   capitalization
 -   missing punctuation (parenthesis, comma, pipe, +)
 
-## 2. Is the package/library installed and loaded?
+## Is the package/library installed and loaded?
 
 If you are calling a function, the library needs to be installed and loaded (or called explicitly).
 
@@ -32,13 +32,13 @@ Here, there are four separate windows or "Panels".
 -   The top-right is the file manager or `Files, Plots, Packages...` panel. It shows files in your directory, plots, packages, and help files.
 -   The bottom-right is the programming environment or `Environment` panel. It contains things you've loaded or coded. Right now it should be empty because you've done neither.
 
-## 3. Is the data loaded in the global environment?
+## Is the data loaded in the global environment?
 
 The data needs to be imported and loaded into the global environment before it can be manipulated.
 
 -   Check the `Environment` panel to see if the dataset of interest is loaded and named as expected.
 
-## 4. Is the syntax correct?
+## Is the syntax correct?
 
 The syntax for the code needs to be correct, and needs to follow the idiomatic rules of R.
 
@@ -46,7 +46,7 @@ The syntax for the code needs to be correct, and needs to follow the idiomatic r
 -   Does the function include all required arguments?
 -   Did I pass in the data?
 
-## 5. Does a simpler version work?
+## Does a simpler version work?
 
 When coding in class, we'll often start simple, then add complexity for our visualization code. The reason for that is to make sure the very basic things are all there and working, and also because it makes debugging much simpler.
 
